Marking build-ui-api/impl and consulo-language-editor-problem-view-api as @NullMarked. Localization (partial) and refactoring.